helm/ingress/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: devops
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/api/"
          backend:
            service:
              name: back-cluster-ip-service
              port:
                number: 8000
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: front-cluster-ip-service
              port:
                number: 4200
